--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
